--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
-    <Folder Include="Interface\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\ServiceAddresRegister\" />
+    <Folder Include="Services\ServicesDepartment\" />
+    <Folder Include="Services\serviceUser\" />
     <Folder Include="Validators\ValidatorAddressRegister\" />
     <Folder Include="Validators\ValidatorDepartment\" />
     <Folder Include="Validators\ValidatorUser\" />
